add treatments and rooms views

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <title>IT SPA</title>
   <base href="/" target="_self">
 </head>
-<body>
-  <main></main>
-  <p class="text-muted">Copyright © IT SPA. All rights reserved.</p>
-  <script src="src/it-spa.js"></script>
+<body class="d-flex flex-column" style="min-height: 100vh">
+  <main class="flex-fill"></main>
+  <footer><p class="text-muted  text-center">Copyright © IT SPA. All rights reserved.</p></footer>
+
+    <script src="src/it-spa.js"></script>
+
+
 </body>
