added link to github and favicon

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" href="https://image.flaticon.com/icons/svg/887/887350.svg" />
 
   <title>IT SPA</title>
   <base href="/" target="_self">
 </head>
 <body class="d-flex flex-column" style="min-height: 100vh">
   <main class="flex-fill"></main>
-  <footer><p class="text-muted  text-center">Copyright © IT SPA. All rights reserved.</p></footer>
+  <footer>
+    <p class="text-muted  text-center">IT SPA by <a href="https://github.com/barbaramistrz">Basia Stolarz.</a></p>
+    <p class="text-muted  text-center">Copyright © IT SPA. All rights reserved.</p></footer>
 
     <script src="src/it-spa.js"></script>
 
