fixed link style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="d-flex flex-column" style="min-height: 100vh">
   <main class="flex-fill"></main>
   <footer>
-    <p class="text-muted  text-center">IT SPA by <a href="https://github.com/barbaramistrz">Basia Stolarz.</a></p>
+    <p class="text-muted  text-center">IT SPA by <a class="text-dark" href="https://github.com/barbaramistrz">Basia Stolarz.</a></p>
     <p class="text-muted  text-center">Copyright © IT SPA. All rights reserved.</p></footer>
 
     <script src="src/it-spa.js"></script>
